--- a/src/main/resources/assets/raid_on/lang/en_us.json
+++ b/src/main/resources/assets/raid_on/lang/en_us.json
@@ -3,11 +3,20 @@
   "itemgroup.raidon": "Raid on!",
   "item.raid_on.prism_of_sight": "Prism Of Sight",
   "item.raid_on.bottle_o_omen": "Bottle O' Omen",
-  "item.raid_on.raid_stone": "Raid Stone",
+  "item.raid_on.raid_rune": "Raid Rune",
   "message.raid_on.bad_omen_worse": "Your bad omen has worsened",
   "message.raid_on.locating_raiders": "Highlighting possible raiders nearby...",
   "message.raid_on.wavescount": "Raid Wave Count = ",
   "message.raid_on.currentraidercount": "Current Raiders = ",
   "message.raid_on.notinraidarea": "You are not in a raid area",
-  "effect.raid_on.raid_wave_loot_effect": "Raid Wave Loot Level"
+  "effect.raid_on.raid_wave_loot_effect": "Raid Wave Loot Level",
+  "commands.raid_on.ended_raid" : "Raid Ended",
+  "commands.raid_on.could_not_end_raid" : "No Raid Found",
+  "commands.raid_on.raid_wave_set" : "Raid Wave Set to ",
+  "commands.raid_on.raid_wave_set_fail" : "Could not set Raid Wave",
+  "commands.raid_on.raid_killed_raiders" : "Raiders are gone",
+  "commands.raid_on.raid_killed_raiders_fail" : "no raiders to kill",
+  "commands.raid_on.raid_start" : "Raid Started at Bad Omen ",
+  "commands.raid_on.raid_termination_fail" : "Raid Termination Failed",
+  "commands.raid_on.raid_termination_success" : "Raid Terminated"
 }
