Clarify Raid Bar and QOL commands. Fix Permissions of Raid Commands

--- a/src/main/resources/assets/raid_on/lang/en_us.json
+++ b/src/main/resources/assets/raid_on/lang/en_us.json
@@ -6,17 +6,22 @@
   "item.raid_on.raid_rune": "Raid Rune",
   "message.raid_on.bad_omen_worse": "Your bad omen has worsened",
   "message.raid_on.locating_raiders": "Highlighting possible raiders nearby...",
-  "message.raid_on.wavescount": "Raid Wave Count = ",
-  "message.raid_on.currentraidercount": "Current Raiders = ",
+  "message.raid_on.wavescount": "Raid Total Wave Count: ",
+  "message.raid_on.currentraidercount": "Current Raiders: ",
   "message.raid_on.notinraidarea": "You are not in a raid area",
   "effect.raid_on.raid_wave_loot_effect": "Raid Wave Loot Level",
   "commands.raid_on.ended_raid" : "Raid Ended",
   "commands.raid_on.could_not_end_raid" : "No Raid Found",
+  "commands.raid_on.could_not_find_raid" : "No Raid Found",
   "commands.raid_on.raid_wave_set" : "Raid Wave Set to ",
   "commands.raid_on.raid_wave_set_fail" : "Could not set Raid Wave",
-  "commands.raid_on.raid_killed_raiders" : "Raiders are gone",
+  "commands.raid_on.raid_killed_raiders" : "Raiders are Gone",
+  "commands.raid_on.raid_despawned_raiders" : "Raiders have Despawned",
   "commands.raid_on.raid_killed_raiders_fail" : "no raiders to kill",
   "commands.raid_on.raid_start" : "Raid Started at Bad Omen ",
   "commands.raid_on.raid_termination_fail" : "Raid Termination Failed",
-  "commands.raid_on.raid_termination_success" : "Raid Terminated"
+  "commands.raid_on.raid_termination_success" : "Raid Terminated",
+  "commands.raid_on.raid_current_wave" : "Current Wave: ",
+  "commands.raid_on.raid_current_time" : "Current Time Left in Ticks: ",
+  "commands.raid_on.gen_fireworks" : "Fireworks Generated"
 }
